[project]
name = "gist-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "numpy>=2.1.3",
    "scikit-learn>=1.5.2",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "scipy>=1.14.1",
    "tqdm>=4.67.0",
    "boto3>=1.35.68",
    "requests>=2.32.3",
    "regex>=2024.11.6",
    "sentencepiece>=0.2.0",
    "sacremoses>=0.1.1",
    "huggingface-hub>=0.26.2",
    "transformers>=4.46.3",
    "importlib-metadata>=8.5.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'"},
]
torchaudio = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'"},
]
torchvision = [
  { index = "pytorch-cu121", marker = "platform_system != 'Darwin'"},
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
]
